--- a/public/chat/chat.css
+++ b/public/chat/chat.css
@@ -27,8 +27,12 @@ body {
 .message {
   min-height: 30px;
   width: 95%;
-  border-radius: 5px;
-  background-color: rgb(57, 63, 82);
+}
+
+.message span {
+  color: white;
+  font-family: arial;
+  letter-spacing: 1px;
 }
 
 .message p {
@@ -38,6 +42,8 @@ body {
   font-size: 1.5rem;
   padding: 10px;
   word-wrap: break-word;
+  background-color: rgb(57, 63, 82);
+  border-radius: 5px;
 }
 
 #toolbar {
@@ -47,6 +53,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 10px;
 }
 
 #toolbar input {
@@ -59,7 +66,21 @@ body {
   border: none;
   outline: none;
   height: 70%;
-  width: 95%;
+  width: 90%;
   font-size: 2.2rem;
   color: white;
+}
+
+#toolbar span {
+  width: 5%;
+  background: no-repeat center/2rem url("../icons/paper.png");
+  background-color: #191f2a;
+  filter: brightness(2);
+  height: 65%;
+  border-radius: 7px;
+  transition: transform 0.15s;
+}
+
+#toolbar span:active {
+  transform: translateX(15px);
 }
